--- a/.env.local.template
+++ b/.env.local.template
@@ -15,4 +15,4 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Config for fetching data from NASA
 # https://api.nasa.gov/
-NASA_API_KEY=
+NASA_API_KEY=beiIp99cRAenTvKQfFDwvojjvxCuIOs178V1moZX
