--- a/.env.local.template
+++ b/.env.local.template
@@ -5,13 +5,13 @@ DEMOS_ENABLED=true
 
 # Config for email form
 # https://medium.com/@dhananjay_71533/send-mail-using-nodemailer-in-node-js-3183366b1b1c
-# EMAIL_ADDRESS=
-# EMAIL_PASSWORD=
+EMAIL_ADDRESS=
+EMAIL_PASSWORD=
 
 # Config for connecting to supabase
 # https://supabase.com/docs/guides/getting-started/quickstarts/nextjs
-# NEXT_PUBLIC_SUPABASE_URL=
-# NEXT_PUBLIC_SUPABASE_ANON_KEY=
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # Config for fetching data from NASA
 # https://api.nasa.gov/
